@@ -32,9 +32,14 @@ export const saveFile = (type, path, data) => {
 
 export const loadFile = (type, path) => {
 	if (type === Types.MAP) {
-		return Promise.resolve(Sample2);
+		switch (path) {
+		case 'sample1':
+			return Promise.resolve(Sample1);
+		case 'sample2':
+			return Promise.resolve(Sample2);
+		}
 	} else if (type === Types.MAP_CUSTOM) {
-		return Promise.resolve(Sample2);
+		return Promise.resolve(Sample1);
 	} else if (type === Types.CAMPAIGN_CUSTOM) {
 		return Promise.resolve(Campaign1);
 	} else if (type === Types.CAMPAIGN) {
@@ -62,7 +67,7 @@ export const loadFile = (type, path) => {
 
 export const getFileList = (type) => {
 	if (type === Types.MAP) {
-		return Promise.resolve(['sample1']);
+		return Promise.resolve(['sample1', 'sample2']);
 	} else if (type === Types.MAP_CUSTOM) {
 		return Promise.resolve([]);
 	} else if (type === Types.CAMPAIGN_CUSTOM) {
