@@ -23,3 +23,5 @@ NOTES: v0.4.0 is not compatible with maps or saves from earlier versions.
 v0.5.0
 * Start of triggers system
 * Win conditions on maps
+* Portals
+* Ability to put equipment in objects
